# rahnuma

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agents/: eligibility.py  graph.py  profile.py  rag_worker.py  supervisor.py  web_worker.py
agents/tools/: merit.py
api/: auth.py  main.py
corpus/: sources.md
docs/: PRD.md
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
ingestion/: chunker.py  embedder.py  loader.py  run.py  store.py
tests/: test_api_basics.py  test_ingestion.py  test_merit.py
